--- a/purchase-service/pom.xml
+++ b/purchase-service/pom.xml
@@ -143,6 +143,20 @@
             <version>5.4.0</version>
         </dependency>
 
+        <!--cache-->
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+            <version>3.4.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+
     </dependencies>
 
     <profiles>
