--- a/purchase-service/src/main/resources/application-dev.properties
+++ b/purchase-service/src/main/resources/application-dev.properties
@@ -1,10 +1,10 @@
 jwt.secret=QdoDodIVI646VJ&
-spring.datasource.url=jdbc:mysql://localhost:3306/relationship_vinteh
+spring.datasource.url=jdbc:mysql://localhost:3306/export_data
 spring.datasource.username=root
 spring.datasource.password=root
 # Show SQL queries
-spring.jpa.show-sql=true
+# spring.jpa.show-sql=true
 # Format SQL for easy reading
-spring.jpa.properties.hibernate.format_sql=true
+# spring.jpa.properties.hibernate.format_sql=true
 # Log request parameters (to see not only the template, but also the values)
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+# logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
