--- a/user-service/src/main/resources/application-dev.properties
+++ b/user-service/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 jwt.secret=QdoDodIVI646VJ&
-spring.datasource.url=jdbc:mysql://localhost:3306/relationship_vinteh
+spring.datasource.url=jdbc:mysql://localhost:3306/export_data
 spring.datasource.username=root
 spring.datasource.password=root
 # Show SQL queries
