--- a/client-service/src/main/resources/application-dev.properties
+++ b/client-service/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 jwt.secret=QdoDodIVI646VJ&
 spring.datasource.url=jdbc:mysql://localhost:3306/export_data
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=admin
 # Show SQL queries
 # spring.jpa.show-sql=true
 # Format SQL for easy reading
