the second test version of the machine cost calculation

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -114,7 +114,7 @@ spring:
         - id: purchase-service
           uri: http://localhost:8093
           predicates:
-            - Path=/api/v1/purchase/**,/api/v1/product/**,/api/v1/warehouse/**,/api/v1/withdrawal-reason/**,/api/v1/driver/**,/api/v1/shipments/**
+            - Path=/api/v1/purchase/**,/api/v1/product/**,/api/v1/warehouse/**,/api/v1/withdrawal-reason/**,/api/v1/driver/**,/api/v1/shipments/**,/api/v1/exchange-rates/**
           filters:
             - CustomTokenRelayFilterFactory
 
