--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -18,7 +18,7 @@ spring:
         - id: web-app
           uri: http://localhost:8081
           predicates:
-            - Path=/login,/clients,/routes,/purchase,/sale,/settings,/administration,/containers,/inventory,/balance,/warehouse,/finance,/stock,/analytics,/profile,/static/**,/css/**,/js/**,/favicon/**,/img/**
+            - Path=/login,/clients,/routes,/purchase,/sale,/settings,/administration,/containers,/inventory,/warehouse,/finance,/stock,/analytics,/profile,/static/**,/css/**,/js/**,/favicon/**,/img/**
           filters:
             - CustomTokenRelayFilterFactory
 
@@ -26,7 +26,7 @@ spring:
         - id: user-service
           uri: http://localhost:8082
           predicates:
-            - Path=/api/v1/user/**,/api/v1/user-balance/**,/api/v1/auth/**,/api/v1/balance/**,/api/v1/transaction/**,/api/v1/accounts/**,/api/v1/branches/**,/api/v1/transaction-categories/**,/api/v1/branch-permissions/**
+            - Path=/api/v1/user/**,/api/v1/auth/**,/api/v1/transaction/**,/api/v1/accounts/**,/api/v1/branches/**,/api/v1/transaction-categories/**,/api/v1/branch-permissions/**
           filters:
             - CustomTokenRelayFilterFactory
 
