eighth step to new crm

--- a/container-service/src/main/resources/application-dev.properties
+++ b/container-service/src/main/resources/application-dev.properties
@@ -4,10 +4,10 @@ spring.datasource.username=root
 spring.datasource.password=admin
 
 # JPA/Hibernate
-spring.jpa.hibernate.ddl-auto=validate
+# spring.jpa.hibernate.ddl-auto=validate
 # Show SQL queries
-spring.jpa.show-sql=true
+# spring.jpa.show-sql=true
 # Format SQL for easy reading
-spring.jpa.properties.hibernate.format_sql=true
+# spring.jpa.properties.hibernate.format_sql=true
 # Log request parameters (to see not only the template, but also the values)
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+# logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
