--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.application.name=user-service
 spring.profiles.active=dev
 server.port=8082
 jwt.expiration=36000
+
+# Suppress Spring Security warning about AuthenticationProvider and UserDetailsService
+# This is intentional - we use JWT authentication, not standard username/password login
+logging.level.org.springframework.security.config.annotation.authentication.configuration.InitializeUserDetailsBeanManagerConfigurer=ERROR
