--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -110,11 +110,11 @@ spring:
         #          filters:
         #            - CustomTokenRelayFilterFactory
 
-        # 📌 Purchase, Warehouse, Product, Driver Balance, Shipments Service
+        # 📌 Purchase, Warehouse, Product, Driver Balance, Vehicles Service
         - id: purchase-service
           uri: http://localhost:8093
           predicates:
-            - Path=/api/v1/purchase/**,/api/v1/product/**,/api/v1/warehouse/**,/api/v1/withdrawal-reason/**,/api/v1/driver/**,/api/v1/shipments/**,/api/v1/exchange-rates/**
+            - Path=/api/v1/purchase/**,/api/v1/product/**,/api/v1/warehouse/**,/api/v1/withdrawal-reason/**,/api/v1/driver/**,/api/v1/vehicles/**,/api/v1/carriers/**,/api/v1/exchange-rates/**
           filters:
             - CustomTokenRelayFilterFactory
 
