sixteenth step to new crm

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -3,8 +3,11 @@ server:
   http2:
     enabled: false
 
-
 spring:
+  security:
+    user:
+      name: disabled
+      password: disabled
   cloud:
     gateway:
       routes:
