--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -29,7 +29,7 @@ spring:
         - id: user-service
           uri: http://localhost:8082
           predicates:
-            - Path=/api/v1/user/**,/api/v1/auth/**,/api/v1/transaction/**,/api/v1/accounts/**,/api/v1/branches/**,/api/v1/transaction-categories/**,/api/v1/branch-permissions/**
+            - Path=/api/v1/user/**,/api/v1/auth/**,/api/v1/transaction/**,/api/v1/accounts/**,/api/v1/branches/**,/api/v1/transaction-categories/**,/api/v1/branch-permissions/**,/api/v1/counterparties/**
           filters:
             - CustomTokenRelayFilterFactory
 
