--- a/container-service/src/main/resources/application.properties
+++ b/container-service/src/main/resources/application.properties
@@ -2,7 +2,9 @@ spring.application.name=container-service
 spring.profiles.active=dev
 server.port=8095
 
-# Service URLs (can be overridden via environment variables)
 client.service.url=${CLIENT_SERVICE_URL:http://localhost:8084}
 user.service.url=${USER_SERVICE_URL:http://localhost:8082}
 purchase.service.url=${PURCHASE_SERVICE_URL:http://localhost:8093}
+
+logging.level.com.zaxxer.hikari=INFO
+logging.level.com.zaxxer.hikari.pool.HikariPool=INFO
