--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -3,10 +3,9 @@ spring.profiles.active=dev
 server.port=8082
 jwt.expiration=36000
 
-# Service URLs (can be overridden via environment variables)
 purchase.service.url=${PURCHASE_SERVICE_URL:http://localhost:8093}
 client.service.url=${CLIENT_SERVICE_URL:http://localhost:8084}
 
-# Suppress Spring Security warning about AuthenticationProvider and UserDetailsService
-# This is intentional - we use JWT authentication, not standard username/password login
 logging.level.org.springframework.security.config.annotation.authentication.configuration.InitializeUserDetailsBeanManagerConfigurer=ERROR
+logging.level.com.zaxxer.hikari=INFO
+logging.level.com.zaxxer.hikari.pool.HikariPool=INFO
