--- a/purchase-service/src/main/resources/application-dev.properties
+++ b/purchase-service/src/main/resources/application-dev.properties
@@ -3,11 +3,13 @@ spring.datasource.url=jdbc:mysql://localhost:3306/export_data
 spring.datasource.username=root
 spring.datasource.password=admin
 
-# JPA/Hibernate
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.leak-detection-threshold=60000
+spring.datasource.hikari.connection-test-query=SELECT 1
+spring.datasource.hikari.keepalive-time=30000
+
 spring.jpa.hibernate.ddl-auto=validate
-# Show SQL queries
-# spring.jpa.show-sql=true
-# Format SQL for easy reading
-# spring.jpa.properties.hibernate.format_sql=true
-# Log request parameters (to see not only the template, but also the values)
-# logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
