--- a/purchase-service/src/main/resources/application-prod.properties
+++ b/purchase-service/src/main/resources/application-prod.properties
@@ -3,5 +3,17 @@ spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
-# JPA/Hibernate
+spring.datasource.hikari.maximum-pool-size=12
+spring.datasource.hikari.minimum-idle=3
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.leak-detection-threshold=0
+spring.datasource.hikari.connection-test-query=SELECT 1
+spring.datasource.hikari.keepalive-time=30000
+spring.datasource.hikari.register-mbeans=true
+
+logging.level.com.zaxxer.hikari=WARN
+logging.level.com.zaxxer.hikari.pool.HikariPool=WARN
+
 spring.jpa.hibernate.ddl-auto=validate
