--- a/purchase-service/src/main/resources/application.properties
+++ b/purchase-service/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.application.name=purchase-service
 spring.profiles.active=dev
 server.port=8093
 
-# Service URLs (can be overridden via environment variables)
 user.service.url=${USER_SERVICE_URL:http://localhost:8082}
 client.service.url=${CLIENT_SERVICE_URL:http://localhost:8084}
+
+logging.level.com.zaxxer.hikari=INFO
+logging.level.com.zaxxer.hikari.pool.HikariPool=INFO
