improved excel export

--- a/purchase-service/src/main/resources/application.properties
+++ b/purchase-service/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.application.name=purchase-service
 spring.profiles.active=dev
 server.port=8093
 
+spring.jpa.properties.hibernate.order_by.default_null_ordering=first
+
 user.service.url=${USER_SERVICE_URL:http://localhost:8082}
 client.service.url=${CLIENT_SERVICE_URL:http://localhost:8084}
 
